<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        tools:context="com.example.flaviokreis.quizapp_brazil.MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/QuestionText"
            android:text="@string/question_1" />

        <EditText
            android:id="@+id/first_capital"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_answer"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/QuestionText"
            android:text="@string/question_2"/>

        <RadioGroup
            android:id="@+id/capital_radio_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp">
            <RadioButton
                android:id="@+id/question_2_rio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rio_de_janeiro"/>

            <RadioButton
                android:id="@+id/question_2_sao_paulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sao_paulo"/>

            <RadioButton
                android:id="@+id/question_2_brasilia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/brasilia" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/QuestionText"
            android:text="@string/question_3"/>

        <EditText
            android:id="@+id/biggest_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_answer"
            android:layout_marginStart="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/QuestionText"
            android:text="@string/question_4"/>

        <CheckBox
            android:id="@+id/inhabitants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/true_text"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/QuestionText"
            android:text="@string/question_5"/>

        <CheckBox
            android:id="@+id/city_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/belo_horizonte"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"/>
        <CheckBox
            android:id="@+id/city_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/santiago"
            android:layout_marginStart="8dp"/>
        <CheckBox
            android:id="@+id/city_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/caracas"
            android:layout_marginStart="8dp"/>
        <CheckBox
            android:id="@+id/city_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aracaju"
            android:layout_marginStart="8dp"/>

        <Button
            android:id="@+id/verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:minWidth="150dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/verify"
            android:layout_marginTop="16dp"/>

    </LinearLayout>

</ScrollView>



